--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="王小鸭的个人网站" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <title>个人网站</title>
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="index.css" />
-    <meta name="description" content="王小鸭的个人网站" />
     <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
     <div class="div1">
@@ -27,11 +27,12 @@
       <p>大家好，我叫王同学，是一名六年级小学生，这是我按照Bilibili up主@康文昌 的教程做的一个网站</p>
       <p>本人接触编程时间很短</p>
       <p>如有人关注到我的话，请多多指教我这个小学生: Bilibili @台风温黛</p>
+      <hr />
       <h2>下面是进一步介绍：</h2>
       <p>我最初的对于“编程”的认知是从小学四年级信息课开始的。</p>
       <p>这时的编程太初级了，就只是一些图形化界面操作而已。</p>
       <p>我对编程的进一步认知是康文昌老师的编程课，下面是他创始的元岛的介绍</p>
-      <p>(也可点击苹果图片以及底部栏“友情赞助”按钮前往元岛官网查看)：</p>
+      <p>(也可点击苹果图片以及底部栏“友情赞助”按钮查看)：</p>
       <img src="midlogo.png" alt="元岛logo" title="元岛logo" width="160px" height="160px" />
       <p class="p1">“嗨~欢迎来到元岛!<br />
         元岛是一个学习型DAO (分布式自治组织) 社区<br />
@@ -43,8 +44,13 @@
       </p>
     </div>
     <div class="div3">
+      <a href="https://www.midorg.com" target="_blank" rel="noopener noreferrer">友情赞助</a>
+      <a style="margin: 10px" href="https://www.midorg.com/h.html" target="_blank" rel="noopener noreferrer">在线HTML
+        工具</a>
+      <a href="https://www.midorg.com/vsc.html" target="_blank" rel="noopener noreferrer">编程软件加速下载</a>
+      <a href="https://www.midorg.com/map.html" target="_blank" rel="noopener noreferrer">
+        &nbsp; Re01知识图谱 </a>
       <p>Copyright &copy; https://lovewjb.github.io/website</p>
-      <a href="https://www.midorg.com" target="_blank">友情赞助</a>
     </div>
     <script>
       if ("serviceWorker" in navigator) {
