--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p>我最初的对于“编程”的认知是从小学四年级信息课开始的。</p>
       <p>这时的编程太初级了，就只是一些图形化界面操作而已。</p>
       <p>我对编程的进一步认知是康文昌老师的编程课，下面是他创始的元岛的介绍</p>
-      <p>(也可点击苹果图片以及底部栏“友情赞助”按钮查看)：</p>
+      <p>(也可点击苹果图片以及底部栏“友情赞助”链接查看)：</p>
       <img src="midlogo.png" alt="元岛logo" title="元岛logo" width="160px" height="160px" />
       <p class="p1">“嗨~欢迎来到元岛!<br />
         元岛是一个学习型DAO (分布式自治组织) 社区<br />
