--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <p>(也可点击苹果图片以及底部栏“友情赞助”链接查看)：</p>
       <img src="midlogo.png" alt="元岛logo" title="元岛logo" width="160px" height="160px" />
       <p class="p1">“嗨~欢迎来到元岛!<br />
-        元岛是一个学习型DAO (分布式自治组织) 社区<br />
-        元岛有永久免费的新时代课程和团结互助的社群<br />
-        你可以将元岛视为在线大学，有课程，有小组，有班级，有社团，等等<br />
-        你可以将元岛视为游戏，写作业和参与活动都能获得经验值或积分，等级高的同学不仅能登上榜单，更能获得实际奖励<br />
-        你可以将元岛视为无边界公司，可以自行或和他人合作进行商业项目<br />
+        元岛是一个学习型DAO (分布式自治组织) 社区。<br />
+        元岛有永久免费的新时代课程和团结互助的社群。<br />
+        你可以将元岛视为在线大学，有课程，有小组，有班级，有社团，等等。<br />
+        你可以将元岛视为游戏，写作业和参与活动都能获得经验值或积分，等级高的同学不仅能登上榜单，更能获得实际奖励。<br />
+        你可以将元岛视为无边界公司，可以自行或和他人合作进行商业项目。<br />
         你也可以将元岛视为社区，这里都是一些团结友爱、热爱学习和积极向上的小伙伴，认识大家扩展你的生活边界”
       </p>
     </div>
@@ -50,7 +50,7 @@
       <a href="https://www.midorg.com/vsc.html" target="_blank" rel="noopener noreferrer">编程软件加速下载</a>
       <a href="https://www.midorg.com/map.html" target="_blank" rel="noopener noreferrer">
         &nbsp; Re01知识图谱 </a>
-      <p>Copyright &copy; https://lovewjb.github.io/website</p>
+      <p>Copyright &copy; https://lovewjb.github.io</p>
     </div>
     <script>
       if ("serviceWorker" in navigator) {
