--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <title>个人网站</title>
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="index.css" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
   </head>
   <body>
     <div class="div1">
       <a href="https://www.midorg.com" target="_blank">
-        <img alt="苹果" src="apple.png" width="80px" height="80px" title="点击有惊喜!" class="img1" />
+        <img alt="苹果" src="img/apple.png" width="80px" height="80px" title="点击有惊喜!" class="img1" />
       </a>
       <p>王小鸭</p>
     </div>
@@ -33,7 +33,7 @@
       <p>这时的编程太初级了，就只是一些图形化界面操作而已。</p>
       <p>我对编程的进一步认知是康文昌老师的编程课，下面是他创始的元岛的介绍</p>
       <p>(也可点击苹果图片以及底部栏“友情赞助”链接查看)：</p>
-      <img src="midlogo.png" alt="元岛logo" title="元岛logo" width="160px" height="160px" />
+      <img src="img/midlogo.png" alt="元岛logo" title="元岛logo" width="160px" height="160px" />
       <p class="p1">“嗨~欢迎来到元岛!<br />
         元岛是一个学习型DAO (分布式自治组织) 社区。<br />
         元岛有永久免费的新时代课程和团结互助的社群。<br />
