--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="div1">
       <a href="https://www.midorg.com" target="_blank">
-        <img alt="苹果" src="img/apple.png" width="80px" height="80px" title="点击有惊喜!" class="img1" />
+        <img alt="王小鸭logo" src="img/logo.png" width="80px" height="80px" title="点击有惊喜!" />
       </a>
       <p>王小鸭</p>
     </div>
