--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="王小鸭的个人网站" />
     <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#f1f1f1" />
     <title>个人网站</title>
     <link rel="icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="index.css" />
