--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <a href="https://www.midorg.com/vsc.html" target="_blank" rel="noopener noreferrer">编程软件加速下载</a>
       <a href="https://www.midorg.com/map.html" target="_blank" rel="noopener noreferrer">
         &nbsp; Re01知识图谱 </a>
-      <p>Copyright &copy; https://lovewjb.github.io</p>
+      <p>Copyright &copy; https://lovewjb.github.io/website</p>
     </div>
     <script>
       if ("serviceWorker" in navigator) {
