--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
       <a href="https://www.midorg.com/map.html" target="_blank" rel="noopener noreferrer">
         &nbsp; Re01知识图谱 </a>
       <p>Copyright &copy; https://lovewjb.github.io/website</p>
+      <a href="https://github.com/lovewjb/website">
+        <button class="button1">
+          <img src="img/R-C.jpg" alt="GitHub Logo" width="17px" height="17px" />
+          <span>GitHub</span>
+        </button>
+      </a>
     </div>
     <script>
       if ("serviceWorker" in navigator) {
