--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
   </head>
   <body>
-    <div class="div1">
+    <header class="div1">
       <a href="https://www.midorg.com" target="_blank">
         <img alt="王小鸭logo" src="img/logo.png" width="80px" height="80px" title="点击有惊喜!" />
       </a>
       <p>王小鸭</p>
-    </div>
+    </header>
     <div class="div2 div21">
+      <h1>欢迎来到王小鸭的网站！！！</h1>
+      <hr />
       <h2>关于我：</h2>
       <p>大家好，我叫王同学，是一名六年级小学生，这是我按照Bilibili up主@康文昌 的教程做的一个网站</p>
       <p>本人接触编程时间很短</p>
@@ -42,8 +44,13 @@
         你可以将元岛视为无边界公司，可以自行或和他人合作进行商业项目。<br />
         你也可以将元岛视为社区，这里都是一些团结友爱、热爱学习和积极向上的小伙伴，认识大家扩展你的生活边界”
       </p>
+      <hr />
+      <h2>我为什么要建这个网站：</h2>
+      <p>1. 这是Re01编程课的作业</p>
+      <p>2. 我对编程感兴趣(编程超有趣的好吧)</p>
+      <p>3. 宣传一下元岛社区</p>
     </div>
-    <div class="div3">
+    <footer class="div3">
       <a href="https://www.midorg.com" target="_blank" rel="noopener noreferrer">友情赞助</a>
       <a style="margin: 10px" href="https://www.midorg.com/h.html" target="_blank" rel="noopener noreferrer">在线HTML
         工具</a>
@@ -57,7 +64,7 @@
           <span>GitHub</span>
         </button>
       </a>
-    </div>
+    </footer>
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", function() {
