--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
   </head>
   <body>
-    <header class="div1">
+    <div class="div1">
       <a href="https://www.midorg.com" target="_blank">
         <img alt="王小鸭logo" src="img/logo.png" width="80px" height="80px" title="点击有惊喜!" />
       </a>
       <p>王小鸭</p>
-    </header>
+    </div>
     <div class="div2 div21">
       <h1>欢迎来到王小鸭的网站！！！</h1>
       <hr />
@@ -50,7 +50,7 @@
       <p>2. 我对编程感兴趣(编程超有趣的好吧)</p>
       <p>3. 宣传一下元岛社区</p>
     </div>
-    <footer class="div3">
+    <div class="div3">
       <a href="https://www.midorg.com" target="_blank" rel="noopener noreferrer">友情赞助</a>
       <a style="margin: 10px" href="https://www.midorg.com/h.html" target="_blank" rel="noopener noreferrer">在线HTML
         工具</a>
@@ -64,7 +64,7 @@
           <span>GitHub</span>
         </button>
       </a>
-    </footer>
+    </div>
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", function() {
