--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   </head>
   <body>
     <div class="div1">
-      <a href="https://www.midorg.com" target="_blank">
-        <img alt="王小鸭logo" src="img/logo.png" width="80px" height="80px" title="点击有惊喜!" />
-      </a>
+      <img alt="王小鸭logo" src="img/logo.png" width="80px" height="80px" title="点击有惊喜!" />
       <p>王小鸭</p>
     </div>
     <div class="div2 div21">
@@ -34,8 +32,10 @@
       <p>我最初的对于“编程”的认知是从小学四年级信息课开始的。</p>
       <p>这时的编程太初级了，就只是一些图形化界面操作而已。</p>
       <p>我对编程的进一步认知是康文昌老师的编程课，下面是他创始的元岛的介绍</p>
-      <p>(也可点击图标图片以及底部栏“友情赞助”链接查看)：</p>
-      <img src="img/midlogo.png" alt="元岛logo" title="元岛logo" width="160px" height="160px" />
+      <p>(也可点击元岛图标图片以及底部栏“友情赞助”链接查看)：</p>
+      <a href="https://www.midorg.com" target="_blank">
+        <img src="img/midlogo.png" alt="元岛logo" title="元岛logo" width="160px" height="160px" />
+      </a>
       <p class="p1">“嗨~欢迎来到元岛!<br />
         元岛是一个学习型DAO (分布式自治组织) 社区。<br />
         元岛有永久免费的新时代课程和团结互助的社群。<br />
