--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
   </head>
   <body>
-    <div class="div1">
+    <header class="div1">
       <img alt="王小鸭logo" src="img/logo.png" width="80px" height="80px" title="点击有惊喜!" />
       <p>王小鸭</p>
-    </div>
-    <div class="div2 div21">
+    </header>
+    <main class="div2 div21">
       <h1>欢迎来到王小鸭的网站！！！</h1>
       <hr />
       <h2>关于我：</h2>
@@ -36,21 +36,21 @@
       <a href="https://www.midorg.com" target="_blank">
         <img src="img/midlogo.png" alt="元岛logo" title="元岛logo" width="160px" height="160px" />
       </a>
-      <p class="p1">“嗨~欢迎来到元岛!<br />
+      <q class="p1">嗨~欢迎来到元岛!<br />
         元岛是一个学习型DAO (分布式自治组织) 社区。<br />
-        元岛有永久免费的新时代课程和团结互助的社群。<br />
+        元岛有永久免费的新时代课程和团结互q的社群。<br />
         你可以将元岛视为在线大学，有课程，有小组，有班级，有社团，等等。<br />
         你可以将元岛视为游戏，写作业和参与活动都能获得经验值或积分，等级高的同学不仅能登上榜单，更能获得实际奖励。<br />
         你可以将元岛视为无边界公司，可以自行或和他人合作进行商业项目。<br />
-        你也可以将元岛视为社区，这里都是一些团结友爱、热爱学习和积极向上的小伙伴，认识大家扩展你的生活边界”
-      </p>
+        你也可以将元岛视为社区，这里都是一些团结友爱、热爱学习和积极向上的小伙伴，认识大家扩展你的生活边界
+      </q>
       <hr />
       <h2>我为什么要建这个网站：</h2>
       <p>1. 这是Re01编程课的作业</p>
       <p>2. 我对编程感兴趣(编程超有趣的好吧)</p>
       <p>3. 宣传一下元岛社区</p>
-    </div>
-    <div class="div3">
+    <main>
+    <footer class="div3">
       <a href="https://www.midorg.com" target="_blank" rel="noopener noreferrer">友情赞助</a>
       <a style="margin: 10px" href="https://www.midorg.com/h.html" target="_blank" rel="noopener noreferrer">在线HTML
         工具</a>
@@ -64,7 +64,7 @@
           <span>GitHub</span>
         </button>
       </a>
-    </div>
+    </footer>
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", function() {
