--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
   </head>
   <body>
-    <header class="div1">
+    <header class="header">
       <img alt="王小鸭logo" src="img/logo.png" width="80px" height="80px" title="点击有惊喜!" />
       <p>王小鸭</p>
     </header>
-    <main class="div2 div21">
+    <main class="main main2">
       <h1>欢迎来到王小鸭的网站！！！</h1>
       <hr />
       <h2>关于我：</h2>
@@ -36,7 +36,7 @@
       <a href="https://www.midorg.com" target="_blank">
         <img src="img/midlogo.png" alt="元岛logo" title="元岛logo" width="160px" height="160px" />
       </a>
-      <q class="p1">嗨~欢迎来到元岛!<br />
+      <q class="q1">嗨~欢迎来到元岛!<br />
         元岛是一个学习型DAO (分布式自治组织) 社区。<br />
         元岛有永久免费的新时代课程和团结互q的社群。<br />
         你可以将元岛视为在线大学，有课程，有小组，有班级，有社团，等等。<br />
@@ -50,7 +50,7 @@
       <p>2. 我对编程感兴趣(编程超有趣的好吧)</p>
       <p>3. 宣传一下元岛社区</p>
     <main>
-    <footer class="div3">
+    <footer class="footer">
       <a href="https://www.midorg.com" target="_blank" rel="noopener noreferrer">友情赞助</a>
       <a style="margin: 10px" href="https://www.midorg.com/h.html" target="_blank" rel="noopener noreferrer">在线HTML
         工具</a>
