--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
   </head>
   <body>
-    <header class="header">
+    <div class="div1">
       <img alt="王小鸭logo" src="img/logo.png" width="80px" height="80px" title="点击有惊喜!" />
       <p>王小鸭</p>
     </header>
-    <main class="main main2">
+    <div class="div div2">
       <h1>欢迎来到王小鸭的网站！！！</h1>
       <hr />
       <h2>关于我：</h2>
@@ -49,8 +49,8 @@
       <p>1. 这是Re01编程课的作业</p>
       <p>2. 我对编程感兴趣(编程超有趣的好吧)</p>
       <p>3. 宣传一下元岛社区</p>
-    <main>
-    <footer class="footer">
+    </main>
+    <div class="div3">
       <a href="https://www.midorg.com" target="_blank" rel="noopener noreferrer">友情赞助</a>
       <a style="margin: 10px" href="https://www.midorg.com/h.html" target="_blank" rel="noopener noreferrer">在线HTML
         工具</a>
@@ -64,7 +64,7 @@
           <span>GitHub</span>
         </button>
       </a>
-    </footer>
+    </div>
     <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", function() {
