--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
   </head>
   <body>
-    <header class="div1">
+    <header class="header">
       <img alt="王小鸭logo" src="img/logo.png" width="80px" height="80px" title="点击有惊喜!" />
       <p>王小鸭</p>
     </header>
@@ -50,7 +50,7 @@
       <p>2. 我对编程感兴趣(编程超有趣的好吧)</p>
       <p>3. 宣传一下元岛社区</p>
     </main>
-    <footer class="div3">
+    <footer class="footer">
       <a href="https://www.midorg.com" target="_blank" rel="noopener noreferrer">友情赞助</a>
       <a style="margin: 10px" href="https://www.midorg.com/h.html" target="_blank" rel="noopener noreferrer">在线HTML
         工具</a>
