--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
       <a href="https://www.midorg.com" target="_blank">
         <img src="img/midlogo.png" alt="元岛logo" title="元岛logo" width="160px" height="160px" />
       </a>
+      <br />
       <q class="q1">嗨~欢迎来到元岛!<br />
         元岛是一个学习型DAO (分布式自治组织) 社区。<br />
-        元岛有永久免费的新时代课程和团结互q的社群。<br />
+        元岛有永久免费的新时代课程和团结互助的社群。<br />
         你可以将元岛视为在线大学，有课程，有小组，有班级，有社团，等等。<br />
         你可以将元岛视为游戏，写作业和参与活动都能获得经验值或积分，等级高的同学不仅能登上榜单，更能获得实际奖励。<br />
         你可以将元岛视为无边界公司，可以自行或和他人合作进行商业项目。<br />
