--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="王小鸭的个人网站" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#f1f1f1" />
-    <title>个人网站</title>
+    <title>王小鸭的个人网站</title>
     <link rel="icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="index.css" />
     <link rel="manifest" href="manifest.json" />
@@ -34,7 +34,7 @@
       <p>我对编程的进一步认知是康文昌老师的编程课，下面是他创始的元岛的介绍</p>
       <p>(也可点击元岛图标图片以及底部栏“友情赞助”链接查看)：</p>
       <a href="https://www.midorg.com" target="_blank">
-        <img src="img/midlogo.png" alt="元岛logo" title="元岛logo" width="160px" height="160px" />
+        <img src="img/midlogo.png" alt="元岛logo" title="元岛社区logo" width="160px" height="160px" />
       </a>
       <br />
       <q class="q1">嗨~欢迎来到元岛!<br />
@@ -65,6 +65,7 @@
           <span>GitHub</span>
         </button>
       </a>
+      <p>↑↑前往GitHub获取源代码</p>
     </footer>
     <script>
       if ("serviceWorker" in navigator) {
