--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <a href="https://www.midorg.com/vsc.html" target="_blank" rel="noopener noreferrer">编程软件加速下载</a>
       <a href="https://www.midorg.com/map.html" target="_blank" rel="noopener noreferrer">
         &nbsp; Re01知识图谱 </a>
-      <p class="p">Copyright &copy; lovewjb.github.io/website</p>
+      <p class="p">Copyright &copy; lovewjb.github.io</p>
       <a href="https://github.com/lovewjb/website">
         <button class="button1">
           <img src="img/R-C.jpg" alt="GitHub Logo" width="17px" height="17px" />
