--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
       <p>1. 这是Re01编程课的作业</p>
       <p>2. 我对编程感兴趣(编程超有趣的好吧)</p>
       <p>3. 宣传一下元岛社区</p>
+      <hr />
+      <h2>注：</h2>
+      <p>
+        现阶段元岛的同学们主要学习<a href="https://space.bilibili.com/34786453" target="_blank" rel="noopener noreferrer">
+          《从零开始的编程课（Re01）》
+        </a>，可以点击链接查看课程。
+      </p>
     </main>
     <footer class="footer">
       <a href="https://www.midorg.com" target="_blank" rel="noopener noreferrer">友情赞助</a>
