--- a/index.html
+++ b/index.html
@@ -53,20 +53,21 @@
       <hr />
       <h2>注：</h2>
       <p>
-        现阶段元岛的同学们主要学习<a href="https://space.bilibili.com/34786453" target="_blank" rel="noopener noreferrer">
+        现阶段元岛的同学们主要学习<a href="https://space.bilibili.com/34786453" target="_blank" rel="noopener noreferrer" class="a">
           《从零开始的编程课（Re01）》
         </a>，可以点击链接查看课程。
       </p>
     </main>
     <footer class="footer">
-      <a href="https://www.midorg.com" target="_blank" rel="noopener noreferrer">友情赞助</a>
-      <a style="margin: 10px" href="https://www.midorg.com/h.html" target="_blank" rel="noopener noreferrer">在线HTML
+      <a href="https://www.midorg.com" target="_blank" rel="noopener noreferrer" class="a">友情赞助</a>
+      <a style="margin: 10px" href="https://www.midorg.com/h.html" target="_blank" rel="noopener noreferrer"
+        class="a">在线HTML
         工具</a>
-      <a href="https://www.midorg.com/vsc.html" target="_blank" rel="noopener noreferrer">编程软件加速下载</a>
-      <a href="https://www.midorg.com/map.html" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.midorg.com/vsc.html" target="_blank" rel="noopener noreferrer" class="a">编程软件加速下载</a>
+      <a href="https://www.midorg.com/map.html" target="_blank" rel="noopener noreferrer" class="a">
         &nbsp; Re01知识图谱 </a>
       <p class="p">Copyright &copy; lovewjb.github.io</p>
-      <a href="https://github.com/lovewjb/website">
+      <a href="https://github.com/lovewjb/website" class="a">
         <button class="button1">
           <img src="img/R-C.jpg" alt="GitHub Logo" width="17px" height="17px" />
           <span>GitHub</span>
