--- a/index.html
+++ b/index.html
@@ -53,9 +53,14 @@
       <hr />
       <h2>注：</h2>
       <p>
-        现阶段元岛的同学们主要学习<a href="https://space.bilibili.com/34786453" target="_blank" rel="noopener noreferrer" class="a">
+        1.现阶段元岛的同学们主要学习<a href="https://space.bilibili.com/34786453" target="_blank" rel="noopener noreferrer"
+          class="a">
           《从零开始的编程课（Re01）》
         </a>，可以点击链接查看课程。
+      </p>
+      <p>2.这是我效仿康老师做的一个留言板网站：<a href="https://static-9d7e6f26-709b-4d4f-9c7f-d4551f50c9c1.bspapp.com/" target="_blank"
+          rel="noopener noreferrer"
+          class="a">https://static-9d7e6f26-709b-4d4f-9c7f-d4551f50c9c1.bspapp.com/</a>，大家可以去看一看。
       </p>
     </main>
     <footer class="footer">
