--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#f1f1f1" />
     <title>王小鸭的个人网站</title>
     <link rel="icon" href="img/favicon.ico" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
@@ -51,16 +51,26 @@
       <p>2. 我对编程感兴趣(编程超有趣的好吧)</p>
       <p>3. 宣传一下元岛社区</p>
       <hr />
-      <h2>注：</h2>
+      <h2>课程与作业：</h2>
       <p>
         1.现阶段元岛的同学们主要学习<a href="https://space.bilibili.com/34786453" target="_blank" rel="noopener noreferrer"
           class="a">
           《从零开始的编程课（Re01）》
         </a>，可以点击链接查看课程。
       </p>
-      <p>2.这是我效仿康老师做的一个留言板网站：<a href="https://static-9d7e6f26-709b-4d4f-9c7f-d4551f50c9c1.bspapp.com/" target="_blank"
+      <p>2.这是我效仿康老师做的一个留言板网站：<a href="https://static-1c3c98eb-bca3-4f56-ba41-c88d59f18782.bspapp.com/" target="_blank"
           rel="noopener noreferrer"
-          class="a">https://static-9d7e6f26-709b-4d4f-9c7f-d4551f50c9c1.bspapp.com/</a>，大家可以去看一看。
+          class="a">https://static-1c3c98eb-bca3-4f56-ba41-c88d59f18782.bspapp.com/</a>，大家可以去看一看。
+      </p>
+      <hr />
+      <h2>注：</h2>
+      <p>我从网上找了一些用HTML+CSS+JS做的小网页，我把它放在了我的网站下，希望会对大家有所帮助：
+        <a href="https://lovewjb.github.io/website/Snap bricks.html" target="_blank" rel="noopener noreferrer"
+          class="a">
+          https://lovewjb.github.io/website/Snap bricks.html</a>,
+        <br />
+        <a href="https://lovewjb.github.io/website/Calculator.html" target="_blank" rel="noopener noreferrer"
+          class="a">https://lovewjb.github.io/website/Calculator.html</a>
       </p>
     </main>
     <footer class="footer">
@@ -80,12 +90,6 @@
       </a>
       <p class="p">↑↑前往GitHub获取源代码</p>
     </footer>
-    <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", function() {
-          navigator.serviceWorker.register("sw.js");
-        });
-      }
-    </script>
+    <script src="js/index.js"></script>
   </body>
 </html>
