--- a/Snap bricks.html
+++ b/Snap bricks.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="王小鸭的个人网站" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#f1f1f1" />
     <title>打砖块小游戏</title>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon.ico" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
     <style>
       #box {
         width: 600px;
