--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
       <h2>注：</h2>
       <p>我从网上找了一些用HTML+CSS+JS做的小网页，我把它放在了我的网站下，希望会对大家有所帮助：
         <a href="https://lovewjb.github.io/website/Calculator.html" target="_blank" rel="noopener noreferrer"
-          class="a">https://lovewjb.github.io/website/Calculator.html</a>
+          class="a">https://lovewjb.github.io/website/
+          <br />
+          Calculator.html
+        </a>
       </p>
     </main>
     <footer class="footer">
