--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </header>
     <main class="main main2">
       <h1>欢迎来到王小鸭的网站！！！</h1>
+      <p>(建议使用电脑浏览此网页)</p>
       <hr />
       <h2>关于我：</h2>
       <p>大家好，我叫王同学，是一名六年级小学生，这是我按照Bilibili up主@康文昌 的教程做的一个网站</p>
@@ -65,9 +66,11 @@
       <hr />
       <h2>注：</h2>
       <p>我从网上找了一些用HTML+CSS+JS做的小网页，我把它放在了我的网站下，希望会对大家有所帮助：
+        <a href="https://lovewjb.github.io/snap-bricks/" target="_blank" rel="noopener noreferrer" class="a">
+          https://lovewjb.github.io/snap-bricks/</a>,
+        <br />
         <a href="https://lovewjb.github.io/website/Calculator.html" target="_blank" rel="noopener noreferrer"
           class="a">https://lovewjb.github.io/website/
-          <br />
           Calculator.html
         </a>
       </p>
