--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     </header>
     <main class="main main2">
       <h1>欢迎来到王小鸭的网站！！！</h1>
-      <p>(建议使用电脑浏览此网页)</p>
       <hr />
       <h2>关于我：</h2>
       <p>大家好，我叫王同学，是一名六年级小学生，这是我按照Bilibili up主@康文昌 的教程做的一个网站</p>
@@ -59,20 +58,15 @@
           《从零开始的编程课（Re01）》
         </a>，可以点击链接查看课程。
       </p>
-      <p>2.这是我效仿康老师做的一个留言板网站：<a href="https://static-1c3c98eb-bca3-4f56-ba41-c88d59f18782.bspapp.com/" target="_blank"
+      <p>2.这是我效仿康老师做的一个留言板网站：<a href="https://static-cdf997d1-2c7f-47e2-a91a-85b9504b4eb2.bspapp.com/" target="_blank"
           rel="noopener noreferrer"
-          class="a">https://static-1c3c98eb-bca3-4f56-ba41-c88d59f18782.bspapp.com/</a>，大家可以去看一看。
+          class="a">https://static-cdf997d1-2c7f-47e2-a91a-85b9504b4eb2.bspapp.com/</a>，大家可以去看一看。
       </p>
       <hr />
       <h2>注：</h2>
       <p>我从网上找了一些用HTML+CSS+JS做的小网页，我把它放在了我的网站下，希望会对大家有所帮助：
-        <a href="https://lovewjb.github.io/snap-bricks/" target="_blank" rel="noopener noreferrer" class="a">
-          https://lovewjb.github.io/snap-bricks/</a>,
-        <br />
         <a href="https://lovewjb.github.io/website/Calculator.html" target="_blank" rel="noopener noreferrer"
-          class="a">https://lovewjb.github.io/website/
-          Calculator.html
-        </a>
+          class="a">https://lovewjb.github.io/website/Calculator.html</a>
       </p>
     </main>
     <footer class="footer">
