--- a/index.html
+++ b/index.html
@@ -11,20 +11,43 @@
     <link rel="icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/favicon-16x16.png"
+    />
   </head>
   <body>
     <header class="header">
-      <img alt="王小鸭logo" src="img/logo.png" width="80px" height="80px" title="点击有惊喜!" />
+      <img
+        alt="王小鸭logo"
+        src="img/logo.png"
+        width="80px"
+        height="80px"
+        title="点击有惊喜!"
+      />
       <p>王小鸭</p>
     </header>
     <main class="main main2">
       <h1>欢迎来到王小鸭的网站！！！</h1>
       <hr />
       <h2>关于我：</h2>
-      <p>大家好，我叫王同学，是一名六年级小学生，这是我按照Bilibili up主@康文昌 的教程做的一个网站</p>
+      <p>
+        大家好，我叫王同学，是一名六年级小学生，这是我按照Bilibili up主@康文昌
+        的教程做的一个网站
+      </p>
       <p>本人接触编程时间很短</p>
       <p>如有人关注到我的话，请多多指教我这个小学生: Bilibili @台风温黛</p>
       <hr />
@@ -34,10 +57,17 @@
       <p>我对编程的进一步认知是康文昌老师的编程课，下面是他创始的元岛的介绍</p>
       <p>(也可点击元岛图标图片以及底部栏“友情赞助”链接查看)：</p>
       <a href="https://www.midorg.com" target="_blank">
-        <img src="img/midlogo.png" alt="元岛logo" title="元岛社区logo" width="160px" height="160px" />
+        <img
+          src="img/midlogo.png"
+          alt="元岛logo"
+          title="元岛社区logo"
+          width="160px"
+          height="160px"
+        />
       </a>
       <br />
-      <q class="q1">嗨~欢迎来到元岛!<br />
+      <q class="q1"
+        >嗨~欢迎来到元岛!<br />
         元岛是一个学习型DAO (分布式自治组织) 社区。<br />
         元岛有永久免费的新时代课程和团结互助的社群。<br />
         你可以将元岛视为在线大学，有课程，有小组，有班级，有社团，等等。<br />
@@ -53,26 +83,59 @@
       <hr />
       <h2>课程与作业：</h2>
       <p>
-        1.现阶段元岛的同学们主要学习<a href="https://space.bilibili.com/34786453" target="_blank" rel="noopener noreferrer"
-          class="a">
-          《从零开始的编程课（Re01）》
-        </a>，可以点击链接查看课程。
+        1.现阶段元岛的同学们主要学习<a
+          href="https://space.bilibili.com/34786453"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="a"
+        >
+          《从零开始的编程课（Re01）》 </a
+        >，可以点击链接查看课程。
       </p>
       <hr />
       <h2>注：</h2>
-      <p>我从网上找了一些用HTML+CSS+JS做的小网页，我把它放在了我的网站下，希望会对大家有所帮助：
-        <a href="https://lovewjb.github.io/website/Calculator.html" target="_blank" rel="noopener noreferrer"
-          class="a">https://lovewjb.github.io/website/Calculator.html</a>
+      <p>
+        我从网上找了一些用HTML+CSS+JS做的小网页，我把它放在了我的网站下，希望会对大家有所帮助：
+        <a
+          href="https://lovewjb.github.io/website/Calculator.html"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="a"
+          >https://lovewjb.github.io/website/Calculator.html</a
+        >
       </p>
     </main>
     <footer class="footer">
-      <a href="https://www.midorg.com" target="_blank" rel="noopener noreferrer" class="a">友情赞助</a>
-      <a style="margin: 10px" href="https://www.midorg.com/h.html" target="_blank" rel="noopener noreferrer"
-        class="a">在线HTML
-        工具</a>
-      <a href="https://www.midorg.com/vsc.html" target="_blank" rel="noopener noreferrer" class="a">编程软件加速下载</a>
-      <a href="https://www.midorg.com/map.html" target="_blank" rel="noopener noreferrer" class="a">
-        &nbsp; Re01知识图谱 </a>
+      <a
+        href="https://www.midorg.com"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="a"
+        >友情赞助</a
+      >
+      <a
+        style="margin: 10px"
+        href="https://www.midorg.com/h.html"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="a"
+        >在线HTML 工具</a
+      >
+      <a
+        href="https://www.midorg.com/vsc.html"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="a"
+        >编程软件加速下载</a
+      >
+      <a
+        href="https://www.midorg.com/map.html"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="a"
+      >
+        &nbsp; Re01知识图谱
+      </a>
       <p class="p">Copyright &copy; lovewjb.github.io</p>
       <a href="https://github.com/lovewjb/website" class="a">
         <button class="button1">
