--- a/h.html
+++ b/h.html
@@ -4,94 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="康文昌的在线HTML小工具" />
+    <meta
+      name="description"
+      content="王小鸭的个人网站/康文昌的在线HTML教学小工具"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#f1f1f1" />
     <title>Re01 HTML 教学小工具</title>
     <link rel="icon" href="img/midlogo.png" />
-    <style>
-      body {
-        margin: 0;
-      }
-
-      a {
-        color: #216cd3;
-        text-decoration: none;
-        border-bottom: 1px dashed;
-      }
-
-      header {
-        height: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        border-bottom: 1px solid #ccc;
-      }
-
-      .main {
-        height: calc(100vh - 51px);
-        overflow: hidden;
-        display: flex;
-      }
-
-      .flex1 {
-        flex: 1;
-      }
-
-      .hr {
-        width: 10px;
-      }
-
-      #show {
-        height: 100%;
-        width: 100%;
-      }
-
-      @media (max-width: 600px) {
-        .main {
-          flex-direction: column;
-        }
-      }
-
-      .button {
-        display: inline-block;
-        border-radius: 4px;
-        background-color: #f4511e;
-        border: none;
-        color: #ffffff;
-        text-align: center;
-        font-size: 14px;
-        padding: 10px;
-        width: 100px;
-        transition: all 0.5s;
-        cursor: pointer;
-        margin: 1px;
-        vertical-align: middle;
-      }
-
-      .button span {
-        cursor: pointer;
-        display: inline-block;
-        position: relative;
-        transition: 0.5s;
-      }
-
-      .button span:after {
-        content: "»";
-        position: absolute;
-        opacity: 0;
-        top: 0;
-        right: -20px;
-        transition: 0.5s;
-      }
-
-      .button:hover span {
-        padding-right: 15px;
-      }
-
-      .button:hover span:after {
-        opacity: 1;
-        right: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="css/h.css" />
+    <link rel="manifest" href="manifest.json" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/favicon-16x16.png"
+    />
   </head>
   <body>
     <header>
@@ -157,7 +96,7 @@
       document.getElementById("show").srcdoc = tip;
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", function () {
-          navigator.serviceWorker.register("sw.js");
+          navigator.serviceWorker.register("js/sw.js");
         });
       }
     </script>
