--- a/Calculator.html
+++ b/Calculator.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="zh">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="王小鸭的个人网站" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#f1f1f1" />
@@ -11,20 +11,32 @@
     <link rel="icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="css/Calculator.css" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/favicon-16x16.png"
+    />
   </head>
   <body>
     <div class="banner">
-      <h2>
-        简 易 计 算 器
-      </h2>
+      <h2>简 易 计 算 器</h2>
     </div>
     <br />
     <div class="content">
       <input type="button" value="清 除" class="clear" onclick="clearValue()" />
-      <input type="text" id="result" readonly="readonly" placeholder="运 算 结 果 显 示" />
+      <input type="text" id="result" readonly="readonly" />
       <br />
       <input type="button" value="1" class="number" onclick="get(this.value)" />
       <input type="button" value="2" class="number" onclick="get(this.value)" />
