--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       <hr />
       <h2>关于我：</h2>
       <p>
-        大家好，我叫王同学，是一名六年级小学生，这是我按照Bilibili up主@康文昌
+        大家好，我叫王同学，是一名七年级初中生，这是我按照Bilibili up主@康文昌
         的教程做的一个网站
       </p>
       <p>本人接触编程时间很短</p>
-      <p>如有人关注到我的话，请多多指教我这个小学生: Bilibili @台风温黛</p>
+      <p>如有人关注到我的话，请多多指教我这个小学生: Bilibili @穗穗平安-岁岁平安</p>
       <hr />
       <h2>下面是进一步介绍：</h2>
       <p>我最初的对于“编程”的认知是从小学四年级信息课开始的。</p>
